--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 						<p>Responsive using a simple media query, but could be expanded with more breakpoints</p>
 						<p>Using a 12 column layout encapsulated in rows</p>
 						<p>Columns can be nested within columns</p>
+						<h4>Get the code <a href="https://github.com/alanmontgomery/flex-layout-example" target="_blank">here via Github</a>
 						<h4>- <a href="https://twitter.com/93alan" target="_blank">@93alan</a></h4>
 					</div>
 
