--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 	<head>
-		<title>Flex example</title>
+		<title>Flex Layout Example</title>
 		<link rel="stylesheet" href="css/flex.css">
 		<link rel="stylesheet" href="css/demo.css">
 	</head>
