--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 		<title>Flex Layout Example</title>
 		<link rel="stylesheet" href="css/flex.css">
 		<link rel="stylesheet" href="css/demo.css">
+
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="@93alan">
+		<meta name="twitter:title" content="Simple Flex Layout with SASS">
+		<meta name="twitter:description" content="A simple, beginner flex layout using sass with 12 columns encapsulated with rows">
+		<meta name="twitter:image" content="https://i.postimg.cc/SKw8b4DW/simple-flex-layout-example.png">
 	</head>
 
 	<body>
