--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 						<p>Responsive using a simple media query, but could be expanded with more breakpoints</p>
 						<p>Using a 12 column layout encapsulated in rows</p>
 						<p>Columns can be nested within columns</p>
-						<h4>Get the code <a href="https://github.com/alanmontgomery/flex-layout-example" target="_blank">here via Github</a>
+						<h4>Get the code via Github</h4>
+						<a href="https://github.com/alanmontgomery/flex-layout-example" target="_blank">
+							<button>
+								<svg class="download" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z"></path></svg>
+								Code
+							</button>
+						</a>
 						<h4>- <a href="https://twitter.com/93alan" target="_blank">@93alan</a></h4>
 					</div>
 
